--- a/less/home-page.less
+++ b/less/home-page.less
@@ -80,9 +80,15 @@ main {
 				width: 100%;
 				// padding: 0 1%;
 				margin: 0 auto;
+
+				
 			}
+			
 		}
-	
+		@media @phone {
+			// width: 50%;
+			overflow: hidden;
+		}
 		// background-color: rgb(34,40,58);
 		// // width: 98%;
 		// margin: 0 auto;
